--- a/views/ccpp_sale_target_view.xml
+++ b/views/ccpp_sale_target_view.xml
@@ -85,6 +85,14 @@
 
     <!--<menuitem id="menu_ccpp_sale_target" name="Sales Target" parent="crm.crm_menu_sales" action="ccpp_sale_target_action" sequence="102"/>-->
 
+    <record id="ccpp_sale_target_action_user" model="ir.actions.server">
+        <field name="name">Sales Target</field>
+        <field name="model_id" ref="model_ccpp_sale_target"/>
+        <field name="type">ir.actions.server</field>
+        <field name="state">code</field>
+        <field name="code">action = model.action_sale_target_user()</field>
+    </record>
+
     <record id="ccpp_sale_target_action_manager" model="ir.actions.server">
         <field name="name">Sales Target</field>
         <field name="model_id" ref="model_ccpp_sale_target"/>
